test/libsolidity/syntaxTests/nameAndTypeResolution/127_enum_invalid_direct_member_access.sol
contract test {
    enum ActionChoices { GoLeft, GoRight, GoStraight, Sit }
    constructor() public {
        choices = Sit;
    }
    ActionChoices choices;
}
// ----
// DeclarationError: (121-124): Undeclared identifier.
